fix: some routes
