# docs/swagger.json
@@ -1057,30 +1057,6 @@
                     "Division Module"
                 ],
                 "summary": "List all divisions",
-                "parameters": [
-                    {
-                        "minimum": 1,
-                        "type": "integer",
-                        "name": "page_num",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "maximum": 100,
-                        "minimum": 1,
-                        "type": "integer",
-                        "name": "page_size",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "minimum": 0,
-                        "type": "integer",
-                        "description": "分页版本号，一个时间戳，用于保证分页查询的一致性和正确性。不填默认使用最新版本时间戳",
-                        "name": "version",
-                        "in": "query"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1400,6 +1376,16 @@
                 ],
                 "summary": "查询提问箱",
                 "parameters": [
+                    {
+                        "enum": [
+                            "id asc",
+                            "updated_at desc"
+                        ],
+                        "type": "string",
+                        "default": "id asc",
+                        "name": "order_by",
+                        "in": "query"
+                    },
                     {
                         "minimum": 0,
                         "type": "integer",
@@ -2318,7 +2304,7 @@
                 }
             },
             "put": {
-                "description": "管理员可修改标题、内容、标签、是否隐藏，用户可修改标题、内容、标签、是否匿名",
+                "description": "管理员可修改标题、内容、标签、是否隐藏，用户可修改标题、内容、标签",
                 "consumes": [
                     "application/json"
                 ],
@@ -2416,7 +2402,7 @@
             }
         },
         "/topic/{id}/_favor": {
-            "post": {
+            "put": {
                 "produces": [
                     "application/json"
                 ],
@@ -2583,7 +2569,7 @@
             }
         },
         "/topic/{id}/_view": {
-            "post": {
+            "put": {
                 "produces": [
                     "application/json"
                 ],
@@ -2662,11 +2648,11 @@
                     },
                     {
                         "enum": [
-                            "time_created",
-                            "time_updated"
+                            "created_at",
+                            "updated_at"
                         ],
                         "type": "string",
-                        "default": "time_updated",
+                        "default": "updated_at",
                         "name": "order_by",
                         "in": "query"
                     },
@@ -2746,11 +2732,11 @@
                     },
                     {
                         "enum": [
-                            "time_created",
-                            "time_updated"
+                            "created_at",
+                            "updated_at"
                         ],
                         "type": "string",
-                        "default": "time_updated",
+                        "default": "updated_at",
                         "name": "order_by",
                         "in": "query"
                     },
@@ -2837,11 +2823,11 @@
                     },
                     {
                         "enum": [
-                            "time_created",
-                            "time_updated"
+                            "created_at",
+                            "updated_at"
                         ],
                         "type": "string",
-                        "default": "time_updated",
+                        "default": "updated_at",
                         "name": "order_by",
                         "in": "query"
                     },
@@ -2929,11 +2915,11 @@
                     },
                     {
                         "enum": [
-                            "time_created",
-                            "time_updated"
+                            "created_at",
+                            "updated_at"
                         ],
                         "type": "string",
-                        "default": "time_updated",
+                        "default": "updated_at",
                         "name": "order_by",
                         "in": "query"
                     },
@@ -3020,7 +3006,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/apis.UserResponse"
+                                            "$ref": "#/definitions/apis.LoginResponse"
                                         }
                                     }
                                 }
@@ -3271,7 +3257,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/apis.UserResponse"
+                                            "$ref": "#/definitions/apis.LoginResponse"
                                         }
                                     }
                                 }
@@ -3931,6 +3917,9 @@
                 "another_user_id": {
                     "type": "integer"
                 },
+                "created_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -3943,10 +3932,7 @@
                 "one_user_id": {
                     "type": "integer"
                 },
-                "time_created": {
-                    "type": "string"
-                },
-                "time_updated": {
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -3971,6 +3957,9 @@
                     "x-nullable": true
                 },
                 "content": {
+                    "type": "string"
+                },
+                "created_at": {
                     "type": "string"
                 },
                 "dislike_count": {
@@ -4013,14 +4002,11 @@
                     "type": "integer",
                     "x-nullable": true
                 },
-                "time_created": {
-                    "type": "string"
-                },
-                "time_updated": {
-                    "type": "string"
-                },
                 "topic_id": {
                     "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
@@ -4099,12 +4085,6 @@
                     "type": "string",
                     "maxLength": 20,
                     "minLength": 1
-                },
-                "pinned_topic_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
                 }
             }
         },
@@ -4153,10 +4133,69 @@
                 }
             }
         },
+        "apis.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "avatar": {
+                    "description": "头像链接",
+                    "type": "string",
+                    "x-nullable": true
+                },
+                "banned": {
+                    "description": "是否被封禁",
+                    "type": "boolean"
+                },
+                "comment_count": {
+                    "description": "发表的评论数",
+                    "type": "integer"
+                },
+                "email": {
+                    "description": "邮箱，可选登录",
+                    "type": "string",
+                    "x-nullable": true
+                },
+                "favorite_topics_count": {
+                    "description": "收藏的话题数",
+                    "type": "integer"
+                },
+                "followers_count": {
+                    "description": "被关注数",
+                    "type": "integer"
+                },
+                "following_users_count": {
+                    "description": "关注数",
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "introduction": {
+                    "description": "个人简介/个性签名",
+                    "type": "string",
+                    "x-nullable": true
+                },
+                "is_admin": {
+                    "type": "boolean"
+                },
+                "topic_count": {
+                    "description": "发表的话题数",
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "apis.MessageCommonResponse": {
             "type": "object",
             "properties": {
                 "content": {
+                    "type": "string"
+                },
+                "created_at": {
                     "type": "string"
                 },
                 "from_user_id": {
@@ -4167,9 +4206,6 @@
                 },
                 "is_me": {
                     "type": "boolean"
-                },
-                "time_created": {
-                    "type": "string"
                 },
                 "to_user_id": {
                     "type": "integer"
@@ -4388,6 +4424,9 @@
                 "content": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
                 "dislike_count": {
                     "description": "点踩数",
                     "type": "integer"
@@ -4443,13 +4482,10 @@
                         "type": "string"
                     }
                 },
-                "time_created": {
-                    "type": "string"
-                },
-                "time_updated": {
-                    "type": "string"
-                },
                 "title": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "view_count": {
